task5/kubernetes/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: gruppe8-tcc
  labels:
    app: test-pod
spec:
  containers:
    - name: test-container
      image: curlimages/curl:latest
      command: ["/bin/sh"]
      args: ["-c", "sleep infinity"]
  restartPolicy: Never
